layout issues

--- a/curation-web/src/scss/curation.scss
+++ b/curation-web/src/scss/curation.scss
@@ -1,6 +1,8 @@
 $primary: #0080aa;
 $font-family-base: "Source Sans Pro",Calibri,Arial,Helvetica,sans-serif;
 $font-size-base: 0.875rem;
+$navbar-padding-y: 0;
+$navbar-brand-padding-y: 0;
 
 @import "../node_modules/bootstrap/scss/mixins/banner";
 // scss-docs-start import-stack
@@ -168,10 +170,10 @@ div.dropzone {
     margin-top: 10px;
     padding: 10px;
 }
-/*
-li.active, li.nav-item:hover{
-    color: #ffffff;!important;
-    background-color: #0080aa;
-}
 
- */
+li.nav-item active, li.nav-item:hover{
+  background-color: #0080aa;
+  .nav-link{
+    color: #ffffff !important;
+  }
+}
